--- a/index.css
+++ b/index.css
@@ -1,12 +1,12 @@
 header{
-    width: 100%;
-    height: 100vh;
+    width: 1092px;
+    height: 129px;
     display:flex;
     flex-direction:row;
     flex-wrap:nowrap;
     justify-content:space-between;
-    align-items:flex-start;
-    align-content:stretch;
+    align-items:center;
+    align-content:center;
 }
 .logo{
     width: 198px;
@@ -15,8 +15,37 @@ header{
 .menu{
     width: 314;
     height: 60;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: nowrap;
+    gap: 2rem;
+    margin-top: 1rem;
+    color: black;
 }
 .search{
-    width: 314;
-    height: 60;
+    width: 314px;
+    height: 60px;
+    margin-top: 1rem;
+    gap: 2rem;
+}
+.buyutec{
+    width: 10px;
+    height: 10px;
+    margin-top: 1rem;
+}
+
+.profile{
+    height: 25px;
+    width: 25px;
+    text-align: right;
+    border-radius: 50px;
+    margin-top: 1rem;
+}
+.fas fa-bell{
+    width: 40px;
+    height: 40px;
+    background-color: none;
+    border-color: blue;
 }
