--- a/index.css
+++ b/index.css
@@ -49,3 +49,8 @@ header{
     background-color: none;
     border-color: blue;
 }
+.suggestion-item-content{
+    width: 150px;
+    margin: 10px;
+    padding: 15px;
+}
