--- a/index.css
+++ b/index.css
@@ -11,8 +11,15 @@ header{
 }
 a{
     color: black;
-    font-size: 20px;
+    font-size: 15px;
+    display: inline-block;
+    padding: 1rem;
+    white-space: nowrap;
+    align-items: flex-start;
+   
+    
 }
+    
 .logo{
     width: 198px;
     height: 60px;
@@ -24,7 +31,6 @@ a{
     flex-direction: row;
     justify-content: center;
     align-items: center;
-    flex-wrap: nowrap;
     gap: 2rem;
     margin-top: 1rem;
     
@@ -156,7 +162,7 @@ p{
 }
 .suggestion-row-hide{
     width: 1700px;
-    height: 370px;
+    height: 250px;
     visibility: hidden;
 }
 footer{
@@ -166,38 +172,53 @@ footer{
     flex-direction:row;
     flex-wrap:nowrap;
     justify-content:space-between;
-    align-items:center;
+    align-items:flex-start;
     align-content:center;
 
 }
 .son{
     width: 448px;
     height: 32px;
-    color: black;
     gap: 4rem;
 }
 .copyright{
     width: 560px;
     height: 55px;
     color: black;
+    font-size: 15px;
+    font-weight: bold;
+    margin: 1rem;
 }
 .follow{
-    width: 138px;
-    height: 109px;
+    width: 287px;
+    height: 30px;
+    font-size: 15px;
+
 }
-footer img{
-    display: flex;
+.apps{
+    width: 287px;
+    height: 30px;
+    font-size: 15px;
+    
+}
+
+.follow-icon{
     flex-direction: row;
     aspect-ratio: 1/1;
     width: 60px;
     height: 60px;
     flex-wrap:nowrap;
-    justify-content:space-between;
-    align-items:center;
-    align-content:center;
+    align-items:flex-start;
+
 
 }
-.apps{
-    width: 285px;
-    height: 109px;
+.apps-icon{
+    flex-direction: row;
+    aspect-ratio: 1/1;
+    width: 150px;
+    height: 60px;
+    flex-wrap:nowrap;
+    align-items:flex-start;
+
+
 }
